--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-eslint": "^8.2.6",
     "daisyui": "^2.15.4",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react": "7.28.0",
     "firebase": "^9.8.3",
+    "g": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
@@ -22,12 +27,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -41,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.2",
+    "eslint": "^4.19.1",
     "tailwindcss": "^3.1.3"
   }
 }
